css/style.css
@font-face {
    font-weight: bold;
    font-family: "Gilroy ExtraBold";
    font-style: normal;

    src: url("../fonts/gilroyextrabold.woff") format("woff"),
    url("../fonts/gilroyextrabold.woff2") format("woff2");
}

@font-face {
    font-weight: lighter;
    font-family: "Gilroy Light";
    font-style: normal;

    src: url("../fonts/gilroylight.woff") format("woff"),
    url("../fonts/gilroylight.woff2") format("woff2");
}

@font-face {
    font-weight: normal;
    font-family: "Open Sans";
    font-style: normal;

    src: url("../fonts/opensans.woff") format("woff"),
    url("../fonts/opensans.woff2") format("woff2");;
}

@font-face {
    font-weight: lighter;
    font-family: "Open Sans Light";
    font-style: normal;

    src: url("../fonts/opensanslight.woff") format("woff"),
    url("../fonts/opensanslight.woff2") format("woff2");
}

/* Safe inheritance */
*, *:before, *:after {
    box-sizing: inherit;

    /*outline: 1px dashed black;*/
}

html {
    box-sizing: border-box;
}

body {
    line-height: 30px;

    min-width: 1240px;

    font-weight: normal;
    font-size: 15px;
    font-family: "Open Sans Light", "Arial", sans-serif;
    color: #464646;
}

h1,
h2 {
    font-size: 47px;
    font-family: "Gilroy ExtraBold", "Arial", sans-serif;
    color: #000000;
}

/* Set default links stylization for links globally */
a {
    color: black;
    text-decoration: none;
}

a:hover {
    /*color: rgba(0, 0, 0, 0.6);*/
}

a:active {
    color: rgba(0, 0, 0, 0.3);
}

/***

Helpers

***/

.visually-hidden
{
    position: absolute;
    overflow: hidden;
    clip: rect(0 0 0 0);
    height: 1px; width: 1px;
    margin: -1px; padding: 0; border: 0;
}

/* Helper - center main content */
.container {
    width: 1160px;
    margin: 0 auto;
}

/***

Shared components

***/

/* Buttons/Links */

.btn-device {
    position: relative;

    display: inline-block;
    padding-top: 9px;
    padding-right: 5px;
    padding-bottom: 9px;
    padding-left: 5px;

    font-size: 18px;
    font-family: "Gilroy ExtraBold", "Arial", sans-serif;
    vertical-align: top;
    text-align: center;
    color: #000000;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 3.6px;
}

.btn-device::before {
    content: "";
    position: absolute;
    top: 40%;
    left: 0;
    z-index: -1;

    width: 100%;
    height: 20%;

    background-color: #f0c52e;

    transition: all 0.2s ease-in-out;
}

.btn-device:hover::before {
    top: 0;

    height: 100%;
}

/*
 @todo: remove it from here
Input (text)
*/

input[type="text"],
textarea {
    width: 360px;
    padding: 20px;
    border: none;

    color: #bababa;
    background: #f2f2f2;
}

input[type="text"]:hover,
textarea:hover {
    background: #eaeaea;
}

input[type="text"]:focus,
textarea:focus
{
    outline: 2px solid #f7e296;
}

input[type="text"]:invalid,
textarea:invalid
{
    background: #f6dada;
}

/* Breadcrumbs */

.breadcrumbs-list
{
    margin: 0;
    margin-left: 60px;
    padding: 0;

    list-style: none;
}

.breadcrumbs-item {
    display: inline-block;

    position: relative;
    padding-right: 39px;
    letter-spacing: 0;
    word-spacing: -12px;
}

.breadcrumbs-item::after {
    content: "";
    position: absolute;
    right: 24px;
    bottom: 13px;
    width: 7px;
    height: 7px;
    background-position: -4px -403px;
    background-image: url("../img/sprite.png");
    background-repeat: no-repeat;
}

.breadcrumbs-link {
    opacity: 0.3;
}

.breadcrumbs-link:hover {
    opacity: 1;
}

.breadcrumbs-link:active {
    opacity: 0.1;
}

/* Pagination */

.pagination__list {
    position: relative;

    display: flex;
    justify-content: center;

    margin: 0;
    padding: 0;
    min-height: 20px;
    margin-bottom: 73px;
    padding-top: 25px;
    padding-right: 125px;
    padding-bottom: 25px;
    padding-left: 125px;

    list-style: none;
    font-size: 0;
    text-align: center;

    background-color: #ebebeb;
}

.pagination__item:not(:first-child):not(:last-child) {
    margin-right: 12px;
    margin-left: 12px;
    font-size: 14px;
}

.pagination__item:first-child,
.pagination__item:last-child
{
    width: 130px;
    height: 70px;
}

.pagination {
    margin-top: 50px;
    width: 760px;
    min-height: 70px;
}

.pagination__item-link,
.pagination__item-link {
    font-family: "Gilroy ExtraBold","Arial",sans-serif;
    font-size: 16px;
    vertical-align: baseline;
    color: rgba(0, 0, 0, 0.3);
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 3.5px;
}

.pagination__item-back,
.pagination__item-forward {
    position: absolute;

    width: 115px;
    height: 70px;
    color: #000000;
}

.pagination__item-back {
    top: 0;
    left: 0;
}

.pagination__item-forward {
    top: 0;
    right: 0;
}

/* Modal Window */

.modal-window {
    display: none;

    position: fixed;
    z-index: 10;
    top: 50%;
    left: 50%;

    min-width: 964px;
    min-height: 275px;
    background: white;

    transform: translate(-50%, -50%);

    box-shadow:
            -40px 0 40px -40px rgba(2, 4, 6, 0.75),
            40px 0 40px -40px rgba(2, 4, 6, 0.75),
            0 8px 20px 2px rgba(2, 4, 6, 0.2)

;
}

.modal-window_show {
    display: block;
}

.modal-window__close {
    position: absolute;
    z-index: 2;
    top: 20px;
    right: 20px;

    width: 65px;
    height: 65px;
    background: #f0c52e;
    border: none;
    border-radius: 50%;
    text-indent: -9999px;

    opacity: 0.6;

    outline: none;
    cursor: pointer;
}

.modal-window__close::after,
.modal-window__close::before
{
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 5;

    width: 32px;
    height: 2px;

    content: "";
    background: white;
}

.modal-window__close::before {
    transform: translate(-50%, -50%) rotate(-45deg);
}

.modal-window__close::after {
    transform: translate(-50%, -50%) rotate(45deg);
}

.modal-window__close:hover {
    opacity: 1;
}

.modal-window__close:active {
    opacity: 0.6;
}
/* ... */

